--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div class="carousel-inner" >
                                               <div class="carousel-caption d-none d-md-block">
                             <h1>Encontre pessoas com os mesmos objetivos!</h1>
-                            <p>Resolva problemas em comum entre os refugiados!</p>
+                            <p>Resolva problemas comuns entre os refugiados!</p>
                             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Saiba mais sobre!</a>
                             </div>
                         <div class="carousel-item active">
